syntax = "proto3";

import "google/protobuf/empty.proto";
package auth;

option go_package = "pkg/pb/auth;auth";

service Auth_V1{
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc IsLogged(IsLoggedRequest) returns (IsLoggedResponse) {}
    rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {}
}

message RegisterRequest{
    string login = 1;
    string password = 2;
    string telegram_login = 3;
}

message RegisterResponse{
    string user_id = 1;
}

message LoginRequest {
    string login = 1;
    string password = 2;
    string telegram_login = 3;
}

message LoginResponse {
    string token = 1;
}

message IsLoggedRequest {
    string telegram_login = 1;
}

message IsLoggedResponse {
    string token = 1;
}

message LogoutRequest {
    string telegram_login = 1;
}